flux/infrastructure/micro/services/yaml-json-tool/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: yaml-json-tool
  namespace: micro
spec:
  selector:
    app: yaml-json-tool
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 8080
    protocol: TCP
